--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.1.7",
-    "@angular/cli": "^19.1.7",
-    "@eslint/js": "^9.20.0",
-    "@swc-node/register": "1.10.9",
-    "@types/express": "5.0.0",
-    "@types/jest": "29.5.14",
-    "@types/node": "22.13.4",
-    "eslint": "^9.20.1",
-    "husky": "9.1.7",
-    "jest": "29.7.0",
-    "jest-preset-angular": "14.5.1",
-    "lint-staged": "15.4.3",
-    "prettier": "3.5.1",
-    "typescript": "5.7.3",
-    "typescript-eslint": "^8.24.0"
+    "@angular-devkit/build-angular": "^19.1.8",
+    "@angular/cli": "^19.1.8",
+    "@eslint/js": "^9.21.0",
+    "@swc-node/register": "^1.10.9",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.5",
+    "eslint": "^9.21.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.2",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   }
 }
