--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "19.1.6",
     "@angular/router": "19.1.6",
     "@angular/ssr": "19.1.7",
+    "esbuild": "^0.25.0",
     "express": "4.21.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.0"
@@ -34,6 +35,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
+    "esbuild": ">=0.25.0",
     "eslint": "^9.21.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
