--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/platform-server": "19.1.6",
     "@angular/router": "19.1.6",
     "@angular/ssr": "19.1.7",
-    "esbuild": "^0.25.0",
     "express": "4.21.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.0"
@@ -35,7 +34,6 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
-    "esbuild": ">=0.25.0",
     "eslint": "^9.21.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
@@ -44,5 +42,10 @@
     "prettier": "^3.5.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild@<=0.24.2": ">=0.25.0"
+    }
   }
 }
