--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,10 @@
 name: artiste-peintre CI
 
 on:
-  push:
+  pull_request:
     branches:
-      - 'chore/**'
-      - 'feature/**'
-      - 'fix/**'
-      - 'refactor/**'
-      - 'test/**'
+      - main
+  push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
@@ -29,6 +26,3 @@ jobs:
         run: |
           pnpm install
           pnpm build
-
-      # - name: Test Project
-      #   run: pnpm test
